# easy-start

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
easy_start/: __init__.py  project_template_renderer.py  start_project.py  utils.py
easy_start/project_templates/: __init__.py  cpp_executable.py  python_package.py
easy_start/static/: README.md
easy_start/static/project_templates/cpp_executable/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
easy_start/static/project_templates/cpp_executable/{{source_folder}}/{{project_short_name}}/: Main{{executable | uppercamelcase}}.cpp
easy_start/static/project_templates/cpp_executable/{{source_folder}}/{{project_short_name}}/utils/: print.cpp  print.h  print.hpp
easy_start/static/project_templates/python_package/: MANIFEST.in  README.md  setup.cfg
easy_start/static/project_templates/python_package/{{package_name}}/: __init__.py
easy_start/static/project_templates/python_package/{{package_name}}/static/: README.md
