[metadata]
name = ivig-easy-start
version = 0.0.0
description = "This package helps initialize a project using a parameterized template."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iliin-ivig/easy-start

[options]
python_requires = >=3.10
packages =
    easy_start
install_requires =
    Jinja2~=3.1.2
scripts =
    easy_start/bin/ivig-easy-start

include_package_data = True