[metadata]
name = {{full_package_name}}
version = 0.0.0
description = "{{description}}"
long_description = file: README.md
long_description_content_type = text/markdown
url = {{url}}

[options]
python_requires = >=3.10
packages = find:
{% if requirements %}
install_requires =
    {% for package in requirements %}
    {{package}}
    {% endfor %}
{% endif %}
{% if scripts %}
scripts =
    {% for script in scripts %}
    {{package_name}}/bin/{{script}}
    {% endfor %}
{% endif %}

include_package_data = {{include_static_data}}
